--- a/app/views/layouts/task_card.html.slim
+++ b/app/views/layouts/task_card.html.slim
@@ -1,28 +1,31 @@
 = content_for :pane_content
   div class="row justify-content-center mt-3"
-    h2 = @task.name
+    h2 = task.name
   .row
-    div class="card m-3 auto w-100 task-#{@task.id} task-card"
+    div class="card m-3 auto w-100 task-#{task.id} task-card"
       div class="card-header"
-        - @task.badges.each do |badge|
+        - task.badges.each do |badge|
           = badge_for(badge)
 
         ul class="nav nav-tabs card-header-tabs" id="pojectTab" role="tablist"
           li class="nav-item"
-            = link_to "Description", task_path(@task), class: "nav-link #{active_link(controller: :tasks, action: :show)}"
+            = link_to "Description", task_path(task), class: "nav-link #{active_link(controller: :tasks, action: :show)}"
           li class="nav-item"
-            = link_to "Summary", summary_task_path(@task), class: "nav-link #{active_link(controller: :tasks, action: :summary)}"
+            = link_to "Summary", summary_task_path(task), class: "nav-link #{active_link(controller: :tasks, action: :summary)}"
           li class="nav-item"
-            = link_to "Time log",  task_time_logs_path(@task), class: "nav-link #{active_link(controller: :time_logs)}"
+            = link_to "Time log",  task_time_logs_path(task), class: "nav-link #{active_link(controller: :time_logs)}"
+          li class="nav-item"
+            = link_to "Comments", task_comments_path(task), class: "nav-link #{active_link(controller: :comments)}"
+
 
       div class="card-body task-content"
 
         = yield :task_content
 
       div class="card-footer"
-        = link_to "Edit task", "#{edit_task_path(@task)}", class: "btn btn-sm btn-info mr-3 float-right"
-        = render('shared/admin/task_card_buttons', task: @task) if user_admin?
+        = link_to "Edit task", "#{edit_task_path(task)}", class: "btn btn-sm btn-info mr-3 float-right"
+        = render('shared/admin/task_card_buttons', task: task) if user_admin?
 
-        div class="text-muted" = @task.created_at.strftime('%B %e at %l:%M %p')
+        div class="text-muted" = task.created_at.strftime('%B %e at %l:%M %p')
 
-= render template: 'layouts/project_card', locals: { project: @project }
+= render template: 'layouts/project_card', locals: { project: task.project }
