--- a/app/views/tasks/show.html.slim
+++ b/app/views/tasks/show.html.slim
@@ -1,4 +1,4 @@
 = content_for :task_content
   = raw @task.description
 
-= render template: 'layouts/task_card'
+= render template: 'layouts/task_card', locals: { task: @task }
