--- a/app/views/users/edit.html.slim
+++ b/app/views/users/edit.html.slim
@@ -1,6 +1,6 @@
 = render 'shared/errors', resource: @user
 
 div class="row justify-content-center mt-3"
-  h2 Sign Up
+  h2 Edit user "#{@user}"
 
-= render 'form', action: "Register"
+= render 'form', action: "Update user"
